Version 0.4.7
* Remove Obselete "cmp=+chroma" from ffpresets
* Remove Depreacted Member QString functions

Version 0.4.6
* Bugfix invalid regular expressions replacement with libfdk-aac predicate -afterburner

Version 0.4.5
* Add FFmpeg v0.11 v1.0 Support

Version 0.4.4
* Czech and Lithuanian translation update
* fix screen initialization with multiple Xserver layout configurations
* add experimental webcam filter dialog
* add cmake variable PULSE_LIBRARY_DIRS for pulseaudio>=2.0
  from pulse version 1.1 to 2.0 the pulsecommon library was moved in a sub directory
  if compilation fails with cannot find -lpulsecommon-2.0
  you can add -DPULSE_LIBRARY_DIRS:PATH=/usr/lib/pulseaudio to fix this,
  or add the new target to /etc/ld.so.conf and regenerate the linker cache with ldconfig.

Version 0.4.3
* fixed filter sort model

Version 0.4.2
* add Extension Manager
* fix brocken icons from newer oxygen icon theme
* add workaround to deprecated ffmpeg functions
* some CMakeLists.txt fixes
* add explicit -DENABLE_DRAWTEXT_FILTER:BOOL=ON some distributions e.g. kubuntu didn't compile FFmpeg with libfreetype support :-/
* add mutexes for QProccess
* fixed if no bookmark file exists create a dummy file for io/open
* fixed navigation widget dragging behavior

Version 0.4.0
* add ffpreset editor
* add configuration dialog
* add more context actions
* fix invalid item delegation
* new rubberband behavior
* fixed rubberband behavior with Xinerama

Version 0.3.0
* fix application crash when open pulsedialog and no pulseserver exists
* removed kde4 support - is now optional
* add bookmark functions
* add add table editor model and item delegation

Version 0.2.3.rc1
* add kde4 support - this can be explicit disabled with cmake -ddisable_kde_support:bool=on
* add customized codec selection
* add refresh logfile
* add drag and drop support for command line preview

Version 0.2.2