@@ -38,7 +38,7 @@ ENDIF (NOT UNIX)
 
 SET (QX11GRAB_VERSION_MAJOR 0)
 SET (QX11GRAB_VERSION_MINOR 4)
-SET (QX11GRAB_VERSION_RELEASE 6)
+SET (QX11GRAB_VERSION_RELEASE 7)
 SET (QX11GRAB_VERSION_DEVELOPMENT "")
 SET (QX11GRAB_VERSION "${QX11GRAB_VERSION_MAJOR}.${QX11GRAB_VERSION_MINOR}.${QX11GRAB_VERSION_RELEASE}${QX11GRAB_VERSION_DEVELOPMENT}")
 SET (QX11GRAB_DBUS_DOMAIN_NAME "de.hjcms.qx11grab")
