@@ -27,19 +27,19 @@ SET (FFMPEG_SUFFIX "" CACHE STRING
   "ffmpeg pkg-config or library file suffix (STRING)"
 )
 
-SET (FFMPEG_AVFORMAT_VERSION "52.78.3" CACHE STRING
+SET (FFMPEG_AVFORMAT_VERSION "53.32.100" CACHE STRING
   "Required libavformat${FFMPEG_SUFFIX} Version" FORCE
 )
 
-SET (FFMPEG_AVCODEC_VERSION "52.86.1" CACHE STRING
+SET (FFMPEG_AVCODEC_VERSION "53.61.100" CACHE STRING
   "Required libavcodec${FFMPEG_SUFFIX} Version" FORCE
 )
 
-SET (FFMPEG_AVUTIL_VERSION "50.24.0" CACHE STRING
+SET (FFMPEG_AVUTIL_VERSION "51.35.100" CACHE STRING
   "Required libavutil${FFMPEG_SUFFIX} Version" FORCE
 )
 
-SET (FFMPEG_AVFILTER_VERSION "2.4.0" CACHE STRING
+SET (FFMPEG_AVFILTER_VERSION "2.61.100" CACHE STRING
   "Required libavfilter${FFMPEG_SUFFIX} Version" FORCE
 )
 
